<resources>
    <string name="app_name">VKM</string>
    <string name="home_header">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="root_detecting">Checking Root Access</string>
    <string name="root_detect_true">Root Access Obtained</string>
    <string name="root_detect_false">Root Access Denied/Not Found</string>
    <string name="non_venom">Latest Venom not found :(</string>
    <string name="venom_check">Checking kernel</string>
    <string name="busybox_onboard">Busybox : Internal</string>
    <string name="data_collect">Collecting Data</string>

    <string name="offline">Offline</string>
    <string name="scanning">Scanning</string>
    <string name="core">Core %d</string>
    <string name="freq">%s</string>
    <string name="simplyKhz">kHz</string>
    <string name="applyOnBoot">Apply On Boot</string>
    <string name="freeze">Freeze</string>
    <string name="start">Start</string>

    <string name="wakeGestures">Wake Gestures</string>
    <string name="battery">Battery</string>
    <string name="vm">Virtual Memory</string>
    <string name="coreInfo">Core Info</string>
    <string name="freqMHz">%s MHz</string>
    <string name="freqkHz">%s kHz</string>
    <string name="tapselect">(Tap to select an option)</string>
    <string name="tunable">Governor Tunables</string>
    <string name="numSerial">%d.</string>
    <string name="totalTunables">Total Governor Tunables : %d</string>

    <!-- CPU -->
    <string name="cpu">CPU</string>
    <string name="cpu_head">CPU info</string>
    <string name="maxfreq">Max Frequency : </string>
    <string name="minfreq">Min Frequency : </string>
    <string name="cpugov">CPU Governor : </string>
    <string name="totalGovs">Total CPU Governors : %d</string>
    <string name="totalFreqs">Total Frequency Levels : %d</string>

    <string name="tunableName"><u>Tunable Name</u></string>
    <string name="value"><u>Value</u></string>
</resources>
