<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="false"
    android:foregroundGravity="center_vertical|center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tanish2k09.vkm.activities.OnBoardActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/parent_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:cardBackgroundColor="@android:color/black"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/onboard_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDarkTeal"
                android:keepScreenOn="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_placeholder"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorPrimaryDarkTeal"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/onboard_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="8dp">

                    <TextView
                        android:id="@+id/root_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:clickable="false"
                        android:contextClickable="false"
                        android:text="@string/root_detecting"
                        android:textColor="@color/applicationBG"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/busybox_onboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:clickable="false"
                        android:contextClickable="false"
                        android:text="@string/busybox_onboard"
                        android:textColor="@color/applicationBG"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/venom_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/venom_check"
                        android:textColor="@color/applicationBG"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                    <TextView
                        android:id="@+id/mkdir_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/data_collect"
                        android:textColor="@color/applicationBG"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:typeface="monospace" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
